test/Fail/PostRtc.agda
-- is an illegal module name in runtime checking
module Fail.PostRtc where
